--- a/src/app/pages/cadastro-usuario/cadastro-usuario.component.css
+++ b/src/app/pages/cadastro-usuario/cadastro-usuario.component.css
@@ -32,3 +32,16 @@
   display: flex;
   flex-direction: column;
 }
+
+.spinner-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 1000;
+}
