--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -33,3 +33,20 @@
 .p-card-title {
   margin: 0;
 }
+
+.spinner-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 1000;
+}
+
+.lembrarLogin {
+  margin-left: 5px;
+}
