--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,20 +1,32 @@
 <div class="login-container">
+  <div *ngIf="loading" class="spinner-overlay">
+    <p-progressSpinner></p-progressSpinner>
+  </div>
   <p-card styleClass="ui-card-shadow">
     <div class="p-card-header">
       <h2 class="p-card-title">Login</h2>
     </div>
     <div class="p-fluid">
+
       <div class="p-field">
         <label for="username">Email/Login</label>
         <input id="email" type="email" pInputText [(ngModel)]="usuario.login" class="p-inputtext p-component">
       </div>
+
       <div class="p-field">
         <label for="password">Senha</label>
         <input id="password" type="password" pInputText [(ngModel)]="usuario.password" class="p-inputtext p-component">
       </div>
+
+      <div class="p-field">
+        <p-checkbox [(ngModel)]="lembraUsuario" [binary]="true"></p-checkbox>
+        <label class="lembrarLogin">Lembrar login</label>
+      </div>
+
       <div class="p-field">
         <button pButton type="button" label="Login" class="p-button-primary" (click)="login()"></button>
       </div>
+
       <div class="p-field">
         <button pButton type="button" label="Cadastre-se" class="p-button-secondary" (click)="register()"></button>
         <button pButton type="button" label="Esqueci minha senha" class="p-button-link" (click)="forgotPassword()"></button>
