--- a/src/app/pages/cadastro-livro/cadastro-livro.component.html
+++ b/src/app/pages/cadastro-livro/cadastro-livro.component.html
@@ -1,91 +1,79 @@
 <p-confirmDialog></p-confirmDialog>
 <div class="container">
-  <div *ngIf="telaListagem">
-    <div>
-      <button pButton type="button" icon="pi pi-sign-out" label="Logout" class="p-button-danger" (click)="logout()"
-        style="float: right;"></button>
-      <h1>Livros cadastrados</h1>
-    </div>
+  <div class="logout-button">
+    <button pButton type="button" icon="pi pi-sign-out" label="Logout" class="p-button-danger"
+      (click)="logout()"></button>
+  </div>
+  <div *ngIf="telaListagem" class="text-center">
+    <h1>Livros cadastrados</h1>
+  </div>
 
+  <div *ngIf="telaListagem">
     <p *ngIf="livros.length <= 0" class="alert alert-warning">Não há nenhum livro cadastrado.</p>
 
     <div *ngIf="livros.length > 0" class="table-responsive mb-4">
-      <table class="table table-bordered table-hover">
-        <thead class="thead-light">
-          <tr>
-            <th>Título</th>
-            <th>Autor</th>
-            <th>Data de registro</th>
-            <th>Ações</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let livro of livros; let i = index">
-            <td>{{ livro.descricao }}</td>
-            <td>{{ livro.autor }}</td>
-            <td>{{ livro.atributoPadrao.dataRegistro | date: 'dd/MM/yyyy'}}</td>
-            <td>
-              <button pButton type="button" style="margin-right: 2px;" icon="pi pi-pencil" class="p-button p-button-primary mr-2"
-              (click)="editarLivro(i)"></button>
-            <button  pButton type="button" icon="pi pi-trash" class="p-button p-button-secondary"
-              (click)="confirmarDelecao(livro)"></button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <p-carousel [value]="livros" [numVisible]="3" [numScroll]="3" [circular]="false"
+        [responsiveOptions]="responsiveOptions">
+        <ng-template let-livro let-i="index" pTemplate="item">
+          <div class="livro-item">
+            <div class="livro-item-content">
+              <div class="mb-3 text-center">
+                <img *ngIf="livro.imagemLivro else semCapa" [src]="livro.imagemLivro" [alt]="livro.descricao" class="livro-image" />
+              </div>
+              <ng-template #semCapa>
+                <img src="../../../assets/semCapa.png" alt="Sem capa" class="livro-image" />
+              </ng-template>
+              <div class="text-center">
+                <h4 class="mb-1">{{livro.descricao}}</h4>
+                <h5 class="mt-0 mb-3">{{livro.autor}}</h5>
+                <h6 class="mt-0 mb-3">{{ livro.atributoPadrao.dataRegistro | date: 'dd/MM/yyyy'}}</h6>
+
+                <div class="livro-buttons mt-5">
+                  <button pButton type="button" icon="pi pi-pencil" class="p-button p-button-primary mr-2"
+                    (click)="editarLivro(livro)"></button>
+                  <button pButton type="button" icon="pi pi-trash" class="p-button p-button-secondary"
+                    (click)="confirmarDelecao(livro)"></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </ng-template>
+      </p-carousel>
     </div>
 
     <button pButton type="button" label="Adicionar Livro" class="p-button p-button-success add-button"
       (click)="cadastrarLivro()"></button>
   </div>
 
-
-  <div *ngIf="telaNovo">
+  <div *ngIf="telaNovo || telaEdicao">
     <div>
-      <h2>Adicionar Novo Livro</h2>
-      <div class="form-container">
+      <h2 class="text-center">{{ telaNovo ? 'Adicionar Novo Livro' : 'Editar Livro' }}</h2>
+      <div class="form-container input-cadastro-edita">
+        <div class="row">
+          <div class="upload-button">
+            <p-fileUpload #fubauto mode="basic" name="meuLivro" accept="image/*" maxFileSize="1000000"
+              (onSelect)="uploadImagemLivro($event)"  chooseLabel="Imagem livro"></p-fileUpload>
+          </div>
+          <div>
+            <button pButton type="button" icon="pi pi-trash" (click)="limpaUpload()"></button>
+          </div>
+        </div>
         <div>
           <input id="titulo" type="text" pInputText placeholder="Título" [(ngModel)]="livroSelecionado.descricao"
             class="p-inputtext p-component">
         </div>
-        <div class="col-md-8">
+        <div>
           <input id="autor" type="text" pInputText placeholder="Autor" [(ngModel)]="livroSelecionado.autor"
             class="p-inputtext p-component">
         </div>
-        <div>
-          <button pButton type="button" label="Adicionar Livro" class="p-button-primary add-button"
-            (click)="adicionarLivro()"></button>
-        </div>
-        <div>
-          <button pButton type="button" label="Voltar" class="p-button-primary add-button" (click)="voltarParaHome()"></button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <div *ngIf="telaEdicao">
-    <div>
-      <h2>Editar Livro</h2>
-      <div class="form-container">
-        <div>
-          <input id="name" type="text" pInputText placeholder="Título" [(ngModel)]="livroSelecionado.descricao"
-            class="p-inputtext p-component">
-        </div>
-        <div>
-          <input id="name" type="text" pInputText placeholder="Autor" [(ngModel)]="livroSelecionado.autor"
-            class="p-inputtext p-component">
-        </div>
-        <div>
-          <button pButton type="button" label="Salvar Edição" class="p-button-primary add-button"
-            (click)="salvarEdicao()"></button>
-        </div>
-        <div>
-          <button pButton type="button" label="Voltar" class="p-button-primary add-button" (click)="voltarParaHome()"></button>
+        <div class="button-container">
+          <button pButton type="button" label="{{ telaNovo ? 'Adicionar Livro' : 'Salvar Edição' }}"
+            class="p-button-primary add-button" (click)="telaNovo ? adicionarLivro() : salvarEdicao()"
+            style="margin-right: 10px;"></button>
+          <button pButton type="button" label="Voltar" class="p-button-secondary add-button"
+            (click)="voltarParaHome()"></button>
         </div>
       </div>
     </div>
   </div>
-
-
 </div>
